# stt-faster

./: .actrc  .aiignore  .bandit.baseline.json  .cursorignore  .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  .yamlfmt  AGENTS.md  CODEX_RULES.md  Dockerfile  ESTONIAN_MODEL_IMPLEMENTATION_PLAN.md  Makefile  README.md  README_TRANSCRIPTION.md  REFACTORING_SUMMARY.md  TEST_REFACTORING_PLAN.md  TEST_REFACTORING_SUMMARY.md  gemini.md  newproj_refacto.md  pyproject.toml  pyrightconfig.json  renovate.json  run_uv.sh  todo.md
.agent/workflows/: run_make.md
.codex/: config.toml  config.yaml  readme_codex.md
.cursor/: mcp.json  modes.json
.cursor/plans/: architecture_diagrams.md  architecture_quick_reference.md  architecture_refactoring_plan.md  fix_code_review_issues.md  fix_preprocessstep_attributeerror.md  fix_preprocessstep_attributeerror_alternatives.md  fix_pyright_type_errors_researched.plan.md  fix_pyright_type_ignores.md  test_architecture_critique.md
.cursor/rules/: cursor-rule-modification.mdc  docker-volumes.mdc  fixing-test.mdc  git-commands.mdc  langchain.mdc  linting-testing-after-changes.mdc  linting.mdc  local-vs-ci-tools.mdc  locate-docs.mdc  logging.mdc  no-summary-docs.mdc  plan-agent-dont-execute.mdc  post-edit-build-test.mdc  precommit-testing-after-changes.mdc  project-context.mdc  python-imports-and-deps.mdc  relative-path.mdc  terminal_and_python.mdc  testing.mdc  uv-sandbox.mdc  validate-json-schemas.mdc
.gemini/: config.yaml  settings.json
.github/actions/setup-uv/: action.yml
.github/workflows/: auto-pr.yml  codeql.yml  codeql_local.yml  meta-linters.yml  python-lint-test.yml  security.yml  semgrep.yml  semgrep_local.yml  test-pyright-local.yml  trivy_pip-audit.yml
backend/: __init__.py  components.py  config.py  database.py  exceptions.py  main.py  model_config.py  model_loader.py  processor.py  run_config.py  test_cuDNN.py  transcribe.py  transcribe.py.backup  types.py
backend/cli/: __init__.py  db.py  main.py  transcription_commands.py  ui.py
backend/preprocess/: __init__.py  config.py  errors.py  io.py  metrics.py  orchestrator.py
backend/preprocess/steps/: denoise_light.py  downmix_resample.py  ffmpeg_pipeline.py  loudness.py
backend/services/: duckdb_state_store.py  factory.py  interfaces.py  json_output_writer.py  shutil_file_mover.py  variant_transcription_service.py  whisper_transcription_service.py
backend/variants/: __init__.py  executor.py  preprocess_steps.py  registry.py  steps.py  transcription_presets.py  variant.py
docker/: PRODUCTION_CONTAINER.md  README.md  app.Dockerfile  docker-compose.yml
docs/: AI_instructions.md  CODEQL_FIX_PLAN.md  Transcription_solution.md  archit_audit.md  archit_audit_problem1_solutions.md  audio_preprocessing_plan.md  code_review_problem9_session.md  ffmpeg_refactor_plan.md  fix_plan_processed_folder_setters.md  new_project_guide.md  overengineering_cleanup_plan.md  plan.plan.md  problem10_script_sprawl_alternatives.md  problem8_implementation_validation.md  problem9_migration_alternatives.md  stt_stages.md  test_audit_alignment_summary.md  test_audit_low_value_tests.md  testing_approach.md  todo.md  transcription_automation_plan.md  variant_values 20.12.2025.txt  variants-architecture-refactoring.plan.md  variants_refactoring_plan.md
docs/Transcription_helpfiles_win/: HOW_TO_USE.txt  check_status.bat
docs/archived/: DUPLICATION_ANALYSIS.md  STATISTICS_ANALYSIS.md  archit_audit.md  code_review_processed_folder_fix.md  ffmpeg_refactor_plan.md  fix_plan_problem9_session.md  parameter_storage_fix_validation.md  problem10_script_sprawl_alternatives.md  problem7_migration_alternatives.md  problem8_fix_plan.md  test_audit_integration_e2e.md  test_audit_low_value_tests.md  type_narrowing_research_findings.md  variants_refactoring_plan.md
docs_AI_coder/: e2e_test_audit.md  e2e_tests_audit.md  parameter_storage_fix_validation.md  transcribe_manager_refactor_plan.md
frontend/: README.md
frontend/src/: .gitkeep
scripts/: __init__.py  check_forbidden_suppressions.sh  check_gpu.py  common.sh  compare_transcription_variants.py  debug_nospeech_prob.py  diagnose_model_vram.py  download_rnnoise_model.py  generate_variant_diffs.py  generate_variant_report.py  new_project_bootstrap.sh  new_project_cleanup.sh  new_project_git_setup.py  run_preprocess.py  transcribe-docker  transcribe_manager.py  validate_estonian_models.py  verify_production_image.sh
scripts/db/: STATISTICS_ANALYSIS.md  __init__.py  check_orphaned_metrics.py  check_parameter_completeness.py  show_recent_runs.py  show_run.py
scripts/git-hooks/: pre-commit  pre-push
scripts/transcription/: __init__.py  database.py  exceptions.py  processor.py
scripts/variant_checks/: README.md  verify_all_variants.py  verify_variant_17.py  verify_variant_7.py
scripts/windows/: OLD_compare_variants.bat  README.md  compare_variants.bat  compare_variants_conservative.bat  compare_variants_custom.bat  compare_variants_nospeech.bat  report_only.bat  transcribe_english.bat  transcribe_estonian.bat  transcribe_estonian_32bit_cpu.bat  transcribe_estonian_Desk.bat  transcribe_estonian_Online.bat
tests/: DUPLICATION_ANALYSIS.md  conftest.py
tests/e2e/: conftest.py  test_cli_commands_real_model.py  test_docker_container.py  test_gpu_diagnostics.py  test_production_container.py  test_real_transcription.py
tests/integration/: conftest.py  test_cli_commands.py  test_common_sh_logging.py  test_gpu_diagnostics.py  test_loudnorm_real_audio.py  test_preprocess_pipeline.py  test_production_db_migration.py  test_variant_systems_comparison.py
tests/unit/: conftest.py  test_architecture.py  test_denoise_light_step.py  test_ffmpeg_pipeline.py  test_logging_config.py  test_loudness_step.py  test_main.py  test_preprocess.py  test_preprocess_steps.py  test_transcribe.py  test_transcribe_database.py  test_transcribe_processor.py  test_variants.py
typings/faster_whisper/: __init__.pyi
