[project]
name = "stt-faster"
version = "0.1.0"
description = "template for LLM experimentation"
authors = [{ name=""}]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ctranslate2>=4.6.0,<5",
    "faster-whisper>=1.0.0,<2.0.0",
    "hf-transfer>=0.1.0,<1.0.0",
    "huggingface-hub>=0.26.0,<1.0.0",
    "langchain>=0.3.27,<0.4.0",
    "langchain-community>=0.3.27,<0.4.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "rich>=14.1.0,<15.0.0",
    "sentence-transformers>=5.1.0,<6.0.0",
    "torch>=2.8.0,<3.0.0",
]

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.6,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "pyright[nodejs]>=1.1.405,<2.0.0",
    "ruff>=0.12.12,<0.13.0",
]
test = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=6.3.0,<7.0.0",
    "pytest-docker>=3.2.3,<4.0.0",
    "pytest-html>=4.1.1,<5.0.0",
    "pytest-mock>=3.15.0,<4.0.0",
    "pytest-socket>=0.7.0,<0.8.0",
    "pytest-xdist>=3.8.0,<4.0.0",
]

[tool.uv]
add-bounds = "major"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
# Add the PyTorch index, but mark it EXPLICIT so nothing comes from it
# unless we explicitly say so in [tool.uv.sources].
explicit = true

# for GPU:
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
# Only these names are allowed to resolve from that index:
torch = { index = "pytorch-cpu" }
# for GPU:
# torch = { index = "pytorch-cu128"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Limit package discovery to the Python code under `backend/` to avoid
# setuptools attempting to package non-Python top-level folders like `docker/` or `logs/`.
[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]

[tool.ruff.lint]
# E203: whitespace-before-punctuation
# W503: line-break-before-binary-operator
# E401: multiple-imports-on-one-line
# E302: expected-2-blank-lines-found-1
# E305: expected-2-blank-lines-after-function-or-class
# E402: module-import-not-at-top-of-file
ignore = ["E203", "E401", "E302", "E305", "E402"]
select = ["E", "F", "W", "T201"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-v",
    "--tb=short",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html:reports/coverage",
    "--ignore=tests/unit/test_debug.py",
    "--ignore=tests/unit/test_logging.py",
    "--ignore=tests/unit/test_search_logic_archived.py",
    "--strict-markers",  # Ensure all markers are registered
]
markers = [
    "slow: Tests that take longer to run (>30s)",
    "docker: Tests requiring a running Docker daemon",
    "requires_ollama: Tests that require Ollama service",
]
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/e2e",
]

# Unified logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)s %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S"
log_file = "reports/test_session.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s %(levelname)s %(name)s - %(message)s"
log_file_date_format = "%Y-%m-%dT%H:%M:%S"

[tool.deptry]
# --- Where to read declared dependencies ------------------------------
requirements_files       = ["requirements.txt"]

# --- What to scan / skip ----------------------------------------------
# keep default excludes (.venv, .git, tests, etc.) and add a few more
extend_exclude           = ["docs", "dist", "build"]
ignore_notebooks         = true                       # faster on mixed repos

# --- Tell Deptry these folders are *first-party* code ------------------
known_first_party        = ["backend", "frontend", "scripts"]

# avoids false DEP003 in src-layout
json_output  = "deptry_report.json"      # for CI artifacts

[tool.deptry.package_module_name_map]
python-dotenv = ["dotenv"]

[tool.coverage.run]
# Limit measured source to backend package and suppress noisy warnings when
# xdist splits tests that don't execute any measured code in a worker.
source = ["backend"]
disable_warnings = ["no-data-collected"]
data_file = "reports/coverage/.coverage"

# Service health check endpoints
[tool.integration.services]
ollama = { health_endpoint = "/api/version" }
